# payroll-manager

./: .gitignore  Cargo.toml  sample.env
macros/: Cargo.toml
macros/src/: derive_custom_model.rs  lib.rs  service_executor.rs
migrations/: 20250315165806_initial.sql
src/: config.rs  lib.rs  main.rs  service.rs
src/auth/: jwt.rs
src/entities/: mod.rs
src/entities/company/: company.rs  company_controller.rs  company_repository.rs  company_service.rs  mod.rs
src/entities/company/custom_models/: company_filter.rs  mod.rs
src/entities/payroll/: mod.rs  payroll.rs  payroll_controller.rs  payroll_repository.rs  payroll_service.rs
src/entities/payroll/custom_models/: download_payroll.rs  mod.rs  payroll_filter.rs
src/entities/permission/: mod.rs  permission.rs  permission_repository.rs  permission_service.rs
src/entities/user/: auth_controller.rs  auth_service.rs  mod.rs  user.rs  user_controller.rs  user_repository.rs  user_service.rs
src/entities/user/custom_dto/: auth_dto.rs
src/error/: error.rs  http_error_code.rs  mod.rs
src/util/: db.rs  file.rs  json_response.rs  minio.rs  mod.rs  multipart.rs  permission.rs
